add media queries

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <link rel="stylesheet" href="./resources/css/normalize.css">
     <link rel="stylesheet" href="./resources/css/style.css">
+    <link rel="stylesheet" href="./resources/css/media-queries.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
         crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700" rel="stylesheet">
@@ -32,11 +33,13 @@
             <li><a href="#growth">Spiritual Growth</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
-       <a class="burgermenu" href="javascript:void(0);" onclick="myFunction()"><i class="fa fa-bars"></i> Menu</a></li>
+       <div class="burgermenu">
+            <a class="menu" href="javascript:void(0);" onclick="myFunction()"><i class="fa fa-bars"></i>   Menu</a></li>
+            <a>Follow us on  <i class="fab fa-facebook"></i></a>
+       </div>    
     </nav>
     <!-- main header image -->
     <section class="main-top">
-        <img src="./resources/images/inside-church.jpg" alt="St. Thomas Aquinas Church Cookeville" srcset="">
     </section>
     <!-- Upcoming Events -->
     <section class="events-container">
@@ -113,16 +116,16 @@
         </div>
         <div class="readings">
             <div class="card">
-               <h4>Mon, May 22, 2018</h4>
-               <p>Reading 1, James 4:1-10<br/>Responsorial Psalm:<br/>Psalms 55:7-8, 9-10, 10-11, 23<br/>Gospel: Mark 9:30-37</p> 
+               <h4>MON, May 22, 2018</h4>
+               <p>Reading 1: James 4:1-10<br/>Responsorial Psalm:<br/>Psalms 55:7-8, 9-10, 10-11, 23<br/>Gospel: Mark 9:30-37</p> 
             </div>
             <div class="card">
-                <h4>Tues, May 22, 2018</h4>
-                <p>Reading 1, James 4:1-10<br/>Responsorial Psalm:<br/>Psalms 55:7-8, 9-10, 10-11, 23<br/>Gospel: Mark 9:30-37</p> 
+                <h4>TUES, May 22, 2018</h4>
+                <p>Reading 1: James 4:1-10<br/>Responsorial Psalm:<br/>Psalms 55:7-8, 9-10, 10-11, 23<br/>Gospel: Mark 9:30-37</p> 
             </div>
             <div class="card">
-                <h4>Weds, May 22, 2018</h4>
-                <p>Reading 1, James 4:1-10<br/>Responsorial Psalm:<br/>Psalms 55:7-8, 9-10, 10-11, 23<br/>Gospel: Mark 9:30-37</p> 
+                <h4>WEDS, May 22, 2018</h4>
+                <p>Reading 1: James 4:1-10<br/>Responsorial Psalm:<br/>Psalms 55:7-8, 9-10, 10-11, 23<br/>Gospel: Mark 9:30-37</p> 
             </div>
         </div>
     </section>
@@ -133,7 +136,6 @@
         </div>
         <div class="schedule">
             <div class="img-mass">
-                <img src="./resources/images/masstimes.jpg" alt="">
             </div>
             <div class="mass-text">
                 <p>Daily Masses at 8:00 AM and Saturday Masses at 5:00 AM</p>
@@ -155,15 +157,15 @@
             </div>
             <div class="button-footer">
                 <div class="button">
-                    <p>SUPPORT OUR <i class="fas fa-church"></i></p>
+                    <p>SUPPORT OUR &nbsp;<i class="fas fa-church"></i></p>
                 </div>
                 <div class="button">
-                    <p>FOLLOW US ON <i class="fab fa-facebook"></i></p>
+                    <p>FOLLOW US ON &nbsp;<i class="fab fa-facebook"></i></p>
                 </div>
             </div>
         </div>
         <div class="poweredby">
-            <p>Powered by</p>
+            <p>POWERED BY:</p>
             <div class="img-container">
                 <div class="netlify">
                     <img src="./resources/images/netlify-light.svg" alt="Netlify logo">
