--- a/about.html
+++ b/about.html
@@ -26,8 +26,8 @@
     </header>
     <nav>
         <ul class="desktop">
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
+            <li><a href="/">Home</a></li>
+            <li><a href="/about">About</a></li>
             <li><a href="#ministries">Ministries</a></li>
             <li><a href="#events">Events</a></li>
             <li><a href="#growth">Spiritual Growth</a></li>
