--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,14 @@
 <html>
 
 <head>
+  <title>Saint Thomas Aquinas Catholic Church</title>
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
   <div id="app"></div>
-  <script src="./main.js" />
+  <script src="./main.js"></script>
 </body>
 
 </html>
